enable preview for all tests too