@@ -56,6 +56,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <argLine>--enable-preview @{argLine}</argLine>
                     <additionalClasspathElements>
                         <additionalClasspathElement>${project.basedir}/target/virtdata-userlibs-${project.version}.jar
                         </additionalClasspathElement>
